Add spawn stumps configuration option and update version to 0.0.9

--- a/TreasuryFarm/i18n/default.json
+++ b/TreasuryFarm/i18n/default.json
@@ -3,5 +3,7 @@
   "farm.description": "A Large Farm, with Forest Farm benefits.",
   "config.farm-options-section": "Farm options",
   "config.spawn-monsters.name": "Spawn monsters by default",
-  "config.spawn-monsters.tooltip": "The default value for the 'spawn monsters at night' option when creating a new save. You can still change the option when creating a new save. This has no effect on existing saves."
+  "config.spawn-monsters.tooltip": "The default value for the 'spawn monsters at night' option when creating a new save. You can still change the option when creating a new save. This has no effect on existing saves.",
+  "config.spawn-stumps.name": "Spawn stumps by default",
+  "config.spawn-stumps.tooltip": "The default value for the 'spawn stumps' option when creating a new save. You can still change the option when creating a new save. This has no effect on existing saves."
 }
